finishing chapter five
