# src/shared/infra/http/routes/index.ts
@@ -3,6 +3,7 @@ import { Router } from 'express';
 import { authenticateRoutes } from './authenticate.routes';
 import { carsRoutes } from './cars.routes';
 import categoriesRoutes from './categories.routes';
+import { passwordRoutes } from './password.routes';
 import { rentalsRoutes } from './rentals.routes';
 import specificationsRoutes from './specifications.routes';
 import { usersRoutes } from './users.routes';
@@ -15,5 +16,6 @@ router.use('/categories', categoriesRoutes);
 router.use('/specifications', specificationsRoutes);
 router.use('/users', usersRoutes);
 router.use('/rentals', rentalsRoutes);
+router.use('/password', passwordRoutes);
 
 export { router };
